# cpp_template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.sample.json  README.md  lint.sh
src/: main.cpp
